<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->

    <include layout="@layout/toolbar" />

    <!-- Search Boxes -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_main__type_keyword"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_main__edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-10dp"
        android:hint="@string/activity_main__keyword_hint"
        android:lines="1"
        android:textSize="@dimen/big_text_size" />

    <!-- Buttons -->

    <Button
        android:id="@+id/id_activity_main__open_timeline_button"
        style="@style/ButtonStyle"
        android:onClick="embeddedTimeline"
        android:text="@string/activity_main__open_timeline" />

    <Button
        android:id="@+id/id_activity_main__show_history_button"
        style="@style/ButtonStyle"
        android:onClick="showHistory"
        android:text="@string/activity_main__show_history_button" />

    <Button
        android:id="@+id/id_activity_main__show_trends_button"
        style="@style/ButtonStyle"
        android:onClick="showTrends"
        android:text="@string/activity_main__show_trends" />

    <!-- Recycler View -->

    <TextView
        android:id="@+id/id_activity_main__history_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_main__show_history_text_view"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_activity_main__recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:padding="10dp"
        android:visibility="gone" />
</LinearLayout>